chore: add vars

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,21 @@
-ENVIRONMENT=
+# database
 DB_HOST=
 DB_PORT=
 DB_NAME=
 DB_DEBUG=
-HTTP_PORT=
+
+# redis
 REDIS_HOST=
 REDIS_PORT=
+
+# discord bot
 TOKEN=
+
+# nodemailer
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_SECURE=
+EMAIL_REQUIRE_TLS=
+EMAIL_AUTH_USER=
+EMAIL_AUTH_PWD=
+EMAIL_TLS_CIPHERS=
