--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"discord.js": "^13.3.1",
 		"dotenv": "^10.0.0",
 		"mongoose": "^6.1.2",
+		"nodemailer": "^6.7.2",
+		"nunjucks": "^3.2.3",
 		"pm2": "^5.1.2",
 		"sharp": "^0.29.3",
 		"superagent": "^6.1.0"
